# django-strava

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish-to-test-pypi.yml  publish.yml
django_strava/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
django_strava/migrations/: 0001_initial.py  0002_auto_20210106_2253.py  0003_auto_20210106_2257.py  0004_webhookevents.py  0005_auto_20210107_1540.py  0006_auto_20210107_1554.py  0007_auto_20210107_2356.py  0008_auto_20210107_2357.py  0009_auto_20210108_0004.py  0010_auto_20210108_1355.py  0011_auto_20210108_1405.py  0012_auto_20210111_1622.py  0013_auto_20210111_2104.py  0014_webhookevent_processed.py  0015_auto_20210112_0949.py
django_strava/templates/strava/: activity.html  base.html  success.html
tests/: settings.py  test_models.py  test_views.py  urls.py
