[project]
name = "django-strava"
version = "0.1.5"
description = "A Django app to access Strava Web APIs."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    { name = "Andy Reagan", email = "andy@andyreagan.com" },
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "Django>=4.0",
    "pytz",
    "requests",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-django",
    "pytz",
]

[dependency-groups]
dev = [
    "django>=4.0",
    "pytest",
    "pytest-django",
]

[project.urls]
Homepage = "https://django-strava.andyreagan.github.io"
Repository = "https://github.com/andyreagan/django-strava"
Issues = "https://github.com/andyreagan/django-strava/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["django_strava"]

[tool.hatch.build.targets.sdist]
include = [
    "django_strava/",
    "LICENSE",
    "README.md",
    "docs/",
]
